# hermes-opencode

./: .gitignore  README.md  install.sh  pyproject.toml
hermesoc/: __init__.py  plugin.yaml
hermesoc/tools/: __init__.py  opencode_tool.py
