[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-oc"
version = "0.1.0"
description = "HermesOC — OpenCode coding agent built into Hermes as a plugin. No OpenCode CLI required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.entry-points."hermes_agent.plugins"]
hermesoc = "hermesoc"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermesoc*"]

[tool.setuptools.package-data]
hermesoc = ["plugin.yaml", "*.md", "opencode/**/*"]
